--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -2,13 +2,18 @@
 
 <table>
   <tr>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th>Date</th>
+    <th>Author</th>
+    <th>Type</th>
+    <th>Comment</th>
   </tr>
 
 <% @comments.each do |comment| %>
   <tr>
+    <td><%= comment.created_at %></td>
+    <td><%= comment.player_name %></td>
+    <td><%= comment.comment_type %></td>
+    <td><%= comment.description %></td>
     <td><%= link_to 'Show', comment %></td>
     <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
     <td><%= link_to 'Destroy', comment, :confirm => 'Are you sure?', :method => :delete %></td>
