--- a/app/views/suggestions/_form.html.erb
+++ b/app/views/suggestions/_form.html.erb
@@ -11,6 +11,17 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= f.label :description, 'Suggestion' %><br />
+    <%= f.text_area :description %>
+  </div>
+  <div class="field">
+    <%= check_box_tag :anonymous, @anonymous, { :checked => @anonymous } %> Add suggestion as anonymous user
+  </div>
+  <div class="field">
+    <%= f.label :post_type_id, 'Suggestion type' %><br />
+    <%= f.text_field :post_type_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
