--- a/app/views/suggestions/index.html.erb
+++ b/app/views/suggestions/index.html.erb
@@ -2,13 +2,18 @@
 
 <table>
   <tr>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th>Date</th>
+    <th>Author</th>
+    <th>Type</th>
+    <th>Suggestion</th>
   </tr>
 
 <% @suggestions.each do |suggestion| %>
   <tr>
+    <td><%= suggestion.created_at %></td>
+    <td><%= suggestion.player_name %></td>
+    <td><%= suggestion.suggestion_type %></td>
+    <td><%= suggestion.description %></td>
     <td><%= link_to 'Show', suggestion %></td>
     <td><%= link_to 'Edit', edit_suggestion_path(suggestion) %></td>
     <td><%= link_to 'Destroy', suggestion, :confirm => 'Are you sure?', :method => :delete %></td>
