Agregando un DateHelper y collection_select's para todos las vistas donde tenga sentido

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -20,7 +20,7 @@
   </div>
   <div class="field">
     <%= f.label :post_type_id, 'Comment type' %><br />
-    <%= f.text_field :post_type_id %>
+    <%= comment_types_select %>
   </div>
   <div class="actions">
     <%= f.submit %>
