--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -10,7 +10,7 @@
 
 <% @comments.each do |comment| %>
   <tr>
-    <td><%= comment.created_at %></td>
+    <td><%= format_date(comment.created_at) %></td>
     <td><%= comment.player_name %></td>
     <td><%= comment.comment_type %></td>
     <td><%= comment.description %></td>
