--- a/app/views/infractions/_form.html.erb
+++ b/app/views/infractions/_form.html.erb
@@ -17,15 +17,15 @@
   </div>
   <div class="field">
     <%= f.label :offender_id %><br />
-    <%= f.text_field :offender_id %>
+    <%= teams_select(:infraction, :offender_id) %>
   </div>
   <div class="field">
     <%= f.label :infraction_type_id %><br />
-    <%= f.text_field :infraction_type_id %>
+    <%= infraction_types_select %>
   </div>
   <div class="field">
     <%= f.label :status_id %><br />
-    <%= f.text_field :status_id %>
+    <%= statuses_select(:infraction) %>
   </div>
   <div class="actions">
     <%= f.submit %>
