agregando primera version de la tabla de posiciones

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <div id="leftcol">
       Left Section
       <div id=menu>
-	<%= link_to 'Scoreboard',score_index_path %><br/>
+	<%= link_to 'Standings',score_index_path %><br/>
 	<%= link_to 'Infractions',infractions_path %><br/>
 	<% if(is_admin?) %>
 	  <%= link_to 'Games', games_path %><br/>
