Revert de algunos de los cambios que no van de acuerdo a la logica que habia pensado

--- a/app/views/infractions/index.html.erb
+++ b/app/views/infractions/index.html.erb
@@ -1,16 +1,15 @@
 <h1>Listing infractions</h1>
   <% unless current_user.nil? %>
-    <%= form_tag ({:action => 'index', :controller => 'infractions'},{:method => 'get'}) do %>
-      <p> 
-	<%= check_box_tag 'show_open'%><%= label_tag 'show_open_only' %>
-      </p> 
-      <p> <%= button_to "Filter"%> </p>
-    <% end %>  
-  <%end%>
+    <%= form_tag ({:action => 'index', :controller => 'infractions'}, {:method => 'get'}) do %>
+      <p><%= check_box_tag 'show_open'%><%= label_tag 'show_open_only' %></p>
+      <p><%= button_to "Filter"%></p>
+    <% end %>
+  <% end %>
 <table>
   <tr>
     <th>Game</th>
-    <th>Witness (Team)</th>
+    <th>Player</th>
+    <th>Team</th>
     <th>Offender</th>
     <th>Infraction type</th>
     <th>Status</th>
@@ -23,16 +22,15 @@
 <% @infractions.each do |infraction| %>
   <tr>
     <td><%= infraction.game.name %></td>
-    <td><%= infraction.player.full_name %> (<%= infraction.player.team.name %>)</td>
+    <td><%= infraction.player.full_name %></td>
+    <td><%= infraction.team.name %></td>
     <td><%= infraction.offender.name %></td>
-    <td><%= infraction.infraction_type.name %></td>
-    <td><%= infraction.status.name %></td>
+    <td><%= infraction.infraction_type %></td>
+    <td><%= infraction.status %></td>
     <td><%= infraction.description %></td>
     <td><%= link_to 'Show', infraction %></td>
-    <% if(is_admin?) %>
-	<td><%= link_to 'Edit', edit_infraction_path(infraction) %></td>
-	<td><%= link_to 'Destroy', infraction, :confirm => 'Are you sure?', :method => :delete %></td>
-    <% end %>
+    <td><%= link_to 'Edit', edit_infraction_path(infraction) %></td>
+    <td><%= link_to 'Destroy', infraction, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
