--- a/app/views/witnesses/show.html.erb
+++ b/app/views/witnesses/show.html.erb
@@ -2,17 +2,12 @@
 
 <p>
   <b>Player:</b>
-  <%= @witness.player_id %>
-</p>
-
-<p>
-  <b>Infraction:</b>
-  <%= @witness.infraction_id %>
+  <%= @witness.player.full_name %>
 </p>
 
 <p>
   <b>Status:</b>
-  <%= @witness.status_id %>
+  <%= @witness.status %>
 </p>
 
 
