--- a/app/views/infractions/index.html.erb
+++ b/app/views/infractions/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Listing infractions</h1>
   <% unless current_user.nil? %>
-    <%= form_tag ({:action => 'index', :controller => 'infractions'}, {:method => 'get'}) do %>
-      <p><%= check_box_tag 'show_open'%><%= label_tag 'show_open_only' %></p>
-      <p><%= button_to "Filter"%></p>
+    <%= form_tag({:action => 'index', :controller => 'infractions'}, {:method => 'get'}) do %>
+      <p><%= check_box_tag 'show_open' %><%= label_tag 'show_open_only' %></p>
+      <p><%= button_to 'Filter' %></p>
     <% end %>
   <% end %>
 <table>
