--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <b>Score:</b>
+  <%= @team.score %>
+</p>
+
+<p>
   <b>Name:</b>
   <%= @team.name %>
 </p>
