--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :description, 'Comment' %><br />
-    <%= f.text_area :description %>
+    <%= check_box_tag :anonymous, '1', @anonymous %> Add comment as anonymous user
   </div>
   <div class="field">
-    <%= check_box_tag :anonymous, @anonymous, { :checked => @anonymous } %> Add comment as anonymous user
+    <%= f.label :description, 'Comment' %><br />
+    <%= f.text_area :description %>
   </div>
   <div class="field">
     <%= f.label :post_type_id, 'Comment type' %><br />
