--- a/app/views/infractions/index.html.erb
+++ b/app/views/infractions/index.html.erb
@@ -7,9 +7,7 @@
   <% end %>
 <table>
   <tr>
-    <th>Game</th>
-    <th>Player</th>
-    <th>Team</th>
+    <th>Reporter</th>
     <th>Offender</th>
     <th>Infraction type</th>
     <th>Status</th>
@@ -21,13 +19,13 @@
 
 <% @infractions.each do |infraction| %>
   <tr>
-    <td><%= infraction.game.name %></td>
-    <td><%= infraction.player.full_name %></td>
-    <td><%= infraction.team.name %></td>
+    <td><%= infraction.reporter %></td>
     <td><%= infraction.offender.name %></td>
     <td><%= infraction.infraction_type %></td>
     <td><%= infraction.status %></td>
     <td><%= infraction.description %></td>
+    <td><%= link_to 'Comments', infraction_comments_path(infraction) %></td>
+    <td><%= link_to 'Witnesses', infraction_witnesses_path(infraction) %></td>
     <td><%= link_to 'Show', infraction %></td>
     <td><%= link_to 'Edit', edit_infraction_path(infraction) %></td>
     <td><%= link_to 'Destroy', infraction, :confirm => 'Are you sure?', :method => :delete %></td>
