--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
       <%= stylesheet_link_tag :all %>
       <%= javascript_include_tag :defaults %>
       <%= javascript_include_tag 'rails' %>
-      <% if(is_admin?) %>
+      <% if user_signed_in? && current_player.is_admin %>
         <%= stylesheet_link_tag "admin" , :media => "all" %>
       <% else %>
         <%= stylesheet_link_tag "green" , :media => "all" %>
@@ -16,7 +16,7 @@
     <div id="header">
       Header Section<br/>
       <% if user_signed_in? %>
-        Signed in as <%= current_user.player.is_admin ? 'ADMINISTRATOR ' : 'NOT ADMINISTRATOR '%>(<%= current_user.email %>)
+        Signed in as <%= current_player.is_admin ? 'ADMINISTRATOR ' : 'NOT ADMINISTRATOR '%>(<%= current_user.email %>)
       <% else %>
         Not signed in or player hasn't been created for user
       <% end %>
