Agregando columna anonymous a los modelos que se pueden crear como anonimos

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= check_box_tag :anonymous, '1', @anonymous %> Add comment as anonymous user
+    <%= f.check_box :anonymous %> Add comment as anonymous user
   </div>
   <div class="field">
     <%= f.label :description, 'Comment' %><br />
