--- a/app/views/infractions/_form.html.erb
+++ b/app/views/infractions/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= check_box_tag :anonymous, '1', @anonymous %> Add infraction as anonymous user
+    <%= f.check_box :anonymous %> Add infraction as anonymous user
   </div>
   <div class="field">
     <%= f.label :description %><br />
