--- a/app/views/suggestions/_form.html.erb
+++ b/app/views/suggestions/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :description, 'Suggestion' %><br />
-    <%= f.text_area :description %>
+    <%= f.check_box :anonymous %> Add suggestion as anonymous user
   </div>
   <div class="field">
-    <%= check_box_tag :anonymous, @anonymous, { :checked => @anonymous } %> Add suggestion as anonymous user
+    <%= f.label :description, 'Suggestion' %><br />
+    <%= f.text_area :description %>
   </div>
   <div class="field">
     <%= f.label :post_type_id, 'Suggestion type' %><br />
