--- a/app/views/infractions/show.html.erb
+++ b/app/views/infractions/show.html.erb
@@ -32,5 +32,7 @@
 
 <%= link_to 'Comments', comments_path %> |
 <%= link_to 'Witnesses', witnesses_path %> |
-<%= link_to 'Edit', edit_infraction_path(@infraction) %> |
+<% if can? :update, @infraction %>
+  <%= link_to 'Edit', edit_infraction_path(@infraction) %> |
+<% end %>
 <%= link_to 'Back', infractions_path %>
