--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -4,26 +4,34 @@
   <tr>
     <th>Score</th>
     <th>Name</th>
-    <th>Code</th>
-    <th>Description</th>
-    <th></th>
-    <th></th>
-    <th></th>
+    <% if can? :manage, Team %>
+      <th>Code</th>
+      <th></th>
+    <% end %>
+    <% if can? :update, Team %>
+      <th></th>
+    <% end %>
   </tr>
 
 <% @teams.each do |team| %>
   <tr>
     <td><%= team.score %></td>
-    <td><%= team.name %></td>
-    <td><%= team.code %></td>
-    <td><%= team.description %></td>
-    <td><%= link_to 'Show', team %></td>
-    <td><%= link_to 'Edit', edit_team_path(team) %></td>
-    <td><%= link_to 'Destroy', team, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to team.name, team %></td>
+    <% if can? :manage, team %>
+      <td><%= team.code %></td>
+    <% end %>
+    <% if can? :update, team %>
+      <td><%= link_to 'Edit', edit_team_path(team) %></td>
+    <% end %>
+    <% if can? :destroy, team %>
+      <td><%= link_to 'Destroy', team, :confirm => 'Are you sure?', :method => :delete %></td>
+    <% end %>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Team', new_team_path %>
+<% if can? :create, Team %>
+  <%= link_to 'New Team', new_team_path %>
+<% end %>
