--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -8,16 +8,19 @@
   <%= @team.name %>
 </p>
 
-<p>
-  <b>Code:</b>
-  <%= @team.code %>
-</p>
+<% if can? :manage, @team %>
+  <p>
+    <b>Code:</b>
+    <%= @team.code %>
+  </p>
+<% end %>
 
 <p>
   <b>Description:</b>
   <%= @team.description %>
 </p>
 
-
-<%= link_to 'Edit', edit_team_path(@team) %> |
+<% if can? :update, @team %>
+  <%= link_to 'Edit', edit_team_path(@team) %> |
+<% end %>
 <%= link_to 'Back', teams_path %>
