--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -15,10 +15,12 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
-  <div class="field">
-    <%= f.label :code %><br />
-    <%= f.text_field :code %>
-  </div>
+  <% if can? :manage, @team %>
+    <div class="field">
+      <%= f.label :code %><br />
+      <%= f.text_field :code %>
+    </div>
+  <% end %>
   <div class="field">
     <%= f.label :description %><br />
     <%= f.text_area :description %>
