--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -19,19 +19,21 @@
     <%= f.label :last_names %><br />
     <%= f.text_field :last_names %>
   </div>
-  <div class="field">
-    <%= f.label :user_id %><br />
-    <%= f.collection_select(:user_id, User.all, :id, :email) %>
-  </div>
-  <div class="field">
-    <%= f.label :team_id %><br />
-    <%= teams_select(:player) %>
-  </div>
-   <div class="field">
-    <%= f.label :is_admin %><br />
-    <%= f.check_box :is_admin %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <% if can? :manage, @player %>
+    <div class="field">
+      <%= f.label :user_id %><br />
+      <%= f.collection_select(:user_id, User.all, :id, :email) %>
+    </div>
+    <div class="field">
+      <%= f.label :team_id %><br />
+      <%= teams_select(:player) %>
+    </div>
+    <div class="field">
+      <%= f.label :is_admin %><br />
+      <%= f.check_box :is_admin %>
+    </div>
+    <div class="actions">
+      <%= f.submit %>
+    </div>
+  <% end %>
 <% end %>
