adding player avatar functionality

--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -2,6 +2,7 @@
 
 <table>
   <tr>
+		<th/>
     <th>Name</th>
     <th>Last names</th>
     <th>User</th>
@@ -16,7 +17,13 @@
 
 <% @players.each do |player| %>
   <tr>
-    <td><%= player.name %></td>
+		<% if player.avatar? %>
+
+			<td><%= image_tag player.avatar.url(:small) %>
+    
+		<% end %>
+		
+		<td><%= player.name %></td>
     <td><%= player.last_names %></td>
     <td><%= player.user.email %></td>
     <td><%= player.team.name %></td>
