--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@player) do |f| %>
+<%= form_for(@player, :html => { :multipart => true }) do |f| %>
   <% if @player.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@player.errors.count, "error") %> prohibited this player from being saved:</h2>
@@ -32,6 +32,9 @@
       <%= f.label :is_admin %><br />
       <%= f.check_box :is_admin %>
     </div>
+		<div class="field">
+			<%= f.file_field :avatar %>
+		</div>
     <div class="actions">
       <%= f.submit %>
     </div>
