--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AvanticaGreen</title>
+    <title>Greenathon</title>
       <%= stylesheet_link_tag :all %>
       <%= javascript_include_tag :defaults %>
-      <%= javascript_include_tag 'rails' %>
       <% if user_signed_in? && current_player.is_admin %>
         <%= stylesheet_link_tag "admin" , :media => "all" %>
       <% else %>
@@ -14,27 +13,52 @@
   </head>
   <body>
     <div id="header">
-      Header Section<br/>
-      <% if user_signed_in? %>
-        Signed in as <%= current_player.is_admin ? 'ADMINISTRATOR ' : 'NOT ADMINISTRATOR '%>(<%= current_user.email %>)
-      <% else %>
-        Not signed in or player hasn't been created for user
-      <% end %>
-    </div>
-    <div id="leftcol">
-      Left Section
-      <div id="menu">
-        <%= link_to 'Standings', root_path %><br/>
-        <%= link_to 'Infractions',infractions_path %><br/>
-        <%= link_to 'Games', games_path %><br/>
-        <%= link_to 'Teams', teams_path %><br/>
-        <%= link_to 'Infraction types',infraction_types_path %><br/>
-        <%= link_to 'Players', players_path %><br/>
+      <div id="login_info">
+        <% if user_signed_in? %>
+          <p>Signed in as <%= current_user.player.full_name %><%= current_player.is_admin ? ' (administrator)' : ''%></p>
+          <p>
+            <%= link_to 'Manage your account', current_player %> |
+            <%= link_to 'Logout', destroy_user_session_path %>
+          </p>
+        <% else %>
+          <p>
+          <%= form_for("user", :url => user_session_path) do |f| %>
+            User name: <%= f.text_field :email %><br />
+            Password: <%= f.password_field :password %><br />
+            <%= f.check_box :remember_me %>
+            <%= f.label :remember_me %><br />
+            <%= f.submit 'Sign in' %>
+            <%= link_to "Forgot your password?", new_password_path('user') %>
+          <% end %>
+          </p>
+          <p>Not a member? <%= link_to 'Create an account', new_user_registration_path %></p>
+        <% end %>
+      </div>
+      <div id="main_menu">
+        <%= render_navigation %>
       </div>
     </div>
-    <div id="content">Content Section
-      <%= raw(display_flash_messages) %>
-      <%= yield :layout %>
+    <div id="main_page">
+      <div id="secondary_menu">
+        <h3>Quick links</h3>
+        <ul>
+          <% if user_signed_in? %>
+            <li><%= link_to 'Create infraction', new_infraction_path %></li>
+          <% else %>
+            <li><%= link_to 'Login', new_user_session_path %></li>
+            <li><%= link_to 'Signup', new_user_registration_path %></li>
+          <% end %>
+        </ul>
+        <h3>Avantica Green</h3>
+        <ul>
+          <li><%= link_to 'Article 1', root_path %></li>
+          <li><%= link_to 'Article 2', root_path %></li>
+        </ul>
+      </div>
+      <div id="content">
+        <%= raw(display_flash_messages) %>
+        <%= yield :layout %>
+      </div>
     </div>
   </body>
 </html>
