--- a/public/stylesheets/green.css
+++ b/public/stylesheets/green.css
@@ -1,32 +1,72 @@
 #header {
-  background: #0f0;
-  position: absolute;
-  top: 0px;
-  left: 0px;
+  background-color: #66CC00;
+  height: 150px;
   width: 100%;
-  height: 50px;
+  float: left;
 }
-#leftcol {
-  background: #f00;
-  position: absolute;
-  top: 50px;
-  left: 0px;
-  width: 150px;
-  height: 100%;
+
+#header #login_info {
+  text-align: right;
+  padding: 5px 10px 0 0;
+  float: right;
 }
+
+#main_menu {
+  margin: 117px 0 0 20%;
+  float: left;
+}
+
+#main_menu ul {
+  margin: 0;
+  color: black;
+  font-weight: bold;
+}
+
+#main_menu ul li.selected {
+  float: left;
+  list-style: none;
+  padding: 5px;
+  margin: 5px;
+  margin-bottom: 0;
+  background-color: white;
+  cursor: pointer;
+}
+
+#main_menu ul li {
+  float: left;
+  list-style: none;
+  padding: 5px;
+  margin: 5px;
+  margin-bottom: 0;
+  background-color: #CCFF99;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+#main_page {
+  clear: left;
+}
+
 #content {
-  background: #fff;
-  position: absolute;
-  top: 50px;
-  left: 150px;
-  width: 700px;
-  height: 100%;
+  float: left;
+  padding-left: 15px;
+  width: 75%;
 }
-#menu {
-  background: #dddddd;
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  width: 120px;
-  height: 300px;
+
+#secondary_menu {
+  float: left;
+  background-color: #CCFF99;
+  width: 20%;
+  padding-left: 5px;
+}
+#secondary_menu ul {
+  padding: 0;
+}
+#secondary_menu ul li {
+  list-style: none;
+  padding: 5px;
+  margin: 5px;
+  color: black;
+  font-weight: bold;
+  cursor: pointer;
 }
