--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@team) do |f| %>
+<%= form_for(@team, :html => { :multipart => true }) do |f| %>
   <% if @team.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@team.errors.count, "error") %> prohibited this team from being saved:</h2>
@@ -25,6 +25,9 @@
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
+	<div class="field">
+		<%= f.file_field :team_logo %>
+	</div>
   <div class="actions">
     <%= f.submit %>
   </div>
