Arreglando tabulacion y agregando imagenes por defecto para equipos y jugadores

--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -32,9 +32,10 @@
       <%= f.label :is_admin %><br />
       <%= f.check_box :is_admin %>
     </div>
-		<div class="field">
-			<%= f.file_field :avatar %>
-		</div>
+    <div class="field">
+      <%= f.label :avatar %><br />
+      <%= f.file_field :avatar %>
+    </div>
     <div class="actions">
       <%= f.submit %>
     </div>
