--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -25,9 +25,10 @@
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
-	<div class="field">
-		<%= f.file_field :team_logo %>
-	</div>
+  <div class="field">
+    <%= f.label :team_logo %><br />
+    <%= f.file_field :team_logo %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
