--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -16,6 +16,8 @@ a { color: #000; }
 a:visited { color: #666; }
 a:hover { color: #fff; background-color:#000; }
 
+a img, a:hover img { border-width: 0; }
+
 div.field, div.actions {
   margin-bottom: 10px;
 }
